[gd_scene load_steps=5 format=3 uid="uid://bxjvg4pajqh37"]

[ext_resource type="Script" path="res://scripts/HUD.gd" id="1_l8fef"]
[ext_resource type="FontFile" uid="uid://dh0hq48pqkf58" path="res://assets/fonts/Minecraft.ttf" id="1_qq6ou"]
[ext_resource type="Texture2D" uid="uid://dt1bgwsu74521" path="res://assets/sprites/coin.png" id="2_q6oml"]
[ext_resource type="Texture2D" uid="uid://cuwu5kn4gwqr5" path="res://assets/sprites/skull.png" id="3_vghci"]

[node name="HUD" type="CanvasLayer"]
follow_viewport_enabled = true
script = ExtResource("1_l8fef")

[node name="Coins" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 21.0
offset_top = 15.0
offset_right = 61.0
offset_bottom = 55.0

[node name="CoinText" type="Label" parent="Coins"]
texture_filter = 1
offset_left = -41.0
offset_top = 14.0
offset_right = -1.0
offset_bottom = 40.0
theme_override_fonts/font = ExtResource("1_qq6ou")
theme_override_font_sizes/font_size = 16
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="CoinImage" type="TextureRect" parent="Coins"]
texture_filter = 1
offset_left = -2.0
offset_top = 14.0
offset_right = 21.0
offset_bottom = 37.0
texture = ExtResource("2_q6oml")

[node name="Deaths" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 10.0
offset_top = 594.0
offset_right = 50.0
offset_bottom = 634.0

[node name="DeathText" type="Label" parent="Deaths"]
texture_filter = 1
offset_left = -5.0
offset_top = 9.0
offset_right = 35.0
offset_bottom = 35.0
theme_override_fonts/font = ExtResource("1_qq6ou")
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="DeathImage" type="TextureRect" parent="Deaths"]
texture_filter = 1
offset_left = 39.0
offset_top = 11.0
offset_right = 55.0
offset_bottom = 27.0
texture = ExtResource("3_vghci")
expand_mode = 1
